[package]
name = "godot_egui"
description = "Egui backend for the Godot Engine"
homepage = "https://github.com/setzer22/godot-egui"
repository = "https://github.com/setzer22/godot-egui"
license = "MIT"
version = "0.1.4"
authors = ["Setzer22"]
keywords = ["gamedev", "gui"]
edition = "2018"
readme = "../README.md"
workspace = ".."

[dependencies]
gdnative = {git="https://github.com/tom-leys/godot-rust.git", rev="b2c948be22df"}
egui = "0.13"
